--- a/css/app.css
+++ b/css/app.css
@@ -119,7 +119,7 @@ h1 {
     left: 50;
     top: 50;
     width: 40%;
-    height: 50%;
+    height: 40%;
     overflow: auto;
     background: #fff;
     opacity: 1;
@@ -127,10 +127,10 @@ h1 {
 
 .modal-message {
   top:  -20%;
-    text-align: center;
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 10px;
+  text-align: center;
+  background-color:#808000;
+  margin: 15% auto;
+  padding: 10px;
 }
 
 .win-message {
@@ -139,3 +139,4 @@ h1 {
     font-size: 20px;
     letter-spacing: 2px;
 }
+
